--- a/UniversityApiBackend/appsettings.json
+++ b/UniversityApiBackend/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "UniversityDb": "Server=PER-JCUETO; Database=CursoDb; Trusted_Connection=true;"
+  },
+  "JsonWebTokenKeys": {
+    "ValidateIssuerSigningkey": true,
+    "IssuerSigningkey": "",
+    "ValidateIssuer": true,
+    "ValidIssuer": "https://localhost:7299",
+    "ValidateAudience": true,
+    "ValidAudience": "https://localhots:7299",
+    "RequireExpirationTime": true,
+    "ValidateLifetime": true
   }
 }
