--- a/UniversityApiBackend/appsettings.json
+++ b/UniversityApiBackend/appsettings.json
@@ -11,7 +11,7 @@
   },
   "JsonWebTokenKeys": {
     "ValidateIssuerSigningkey": true,
-    "IssuerSigningkey": "",
+    "IssuerSigningkey": "ghfhgvg-kjhkjhhkh-lwuihkjd-qhjkqh",
     "ValidateIssuer": true,
     "ValidIssuer": "https://localhost:7299",
     "ValidateAudience": true,
