--- a/UniversityApiBackend/appsettings.json
+++ b/UniversityApiBackend/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UniversityDb": "Server=PER-JCUETO; Database=CursoDb; Trusted_Connection=true;"
+    "UniversityDb": "Server=PER-JCUETO; Database=CursoDb; Trusted_Connection=true; Encrypt=False;"
   },
   "JsonWebTokenKeys": {
     "ValidateIssuerSigningkey": true,
@@ -18,5 +18,37 @@
     "ValidAudience": "https://localhots:7299",
     "RequireExpirationTime": true,
     "ValidateLifetime": true
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Verbose",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.LifeTime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "UniversityDb",
+          "sinkOptionsSection": {
+            "tableName": "Logs",
+            "schemaName": "EventLogging",
+            "autoCreateSqlTable": true,
+            "batchPostingLimit": 1000,
+            "period": "0.00:00:30"
+          },
+          "restrictedToMinimumLevel": "Warning"
+        }
+      }
+    ]
   }
 }
